# pic-your-booth

./: .env.example  .gitignore  .impeccable.md  .mcp.json  CLAUDE.md  README.md
.claude/: settings.json
.claude/agents/: _registry.md  ad-specialist.md  architect.md  brand-guardian.md  brand.md  designer.md  dj-promoter.md  meta-ads-specialist.md  product-specialist.md  seo.md  social-creative.md  social-media.md  (+3 more)
agents/: brand-guardian.md  designer.md  meta-ads-specialist.md  social-creative.md  website-designer.md
docs/: export-guide.md  google-business-description.txt  prd-website.md
knowledge/: ab-testing.md  marketing-psychology-pricing.md  marketing-psychology-viral-retention.md  pym-design-system-web.html  pym-design-tokens.json  social-creatives.md  ui-ux-principles.md  website-design-cro.md
playlist-convertor/: .gitignore  README.md  auth.sh  pyproject.toml
playlist-convertor/docs/: auto-set-builder.html  content-creation-guidelines.md  index.html  mix-point-analyzer.html  playlist-convertor-overview.html
playlist-convertor/src/playlist_convertor/: __init__.py  analyzer.py  arc_presets.py  auto_setbuilder.py  camelot.py  cli.py  config.py  downloader.py  energy.py  library.py  log_setup.py  organizer.py  pipeline.py  progress.py  rekordbox_export.py  serato_compat.py  serato_export.py  setbuilder.py  spotify_client.py  stems.py  tagger.py  track_search.py  vocal_activity.py
playlist-convertor/tests/: test_arc_presets.py  test_auto_setbuilder.py  test_camelot.py  test_library.py  test_stems.py  test_vocal_activity.py
scripts/: hubspot-mcp.sh
(+339 files in other folders)
