[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-convertor"
version = "0.1.0"
description = "Convert Spotify playlists to DJ-ready MP3s for Rekordbox/Serato"
requires-python = ">=3.10,<3.15"
dependencies = [
    "click>=8.1",
    "spotdl>=4.2",
    "rich>=13.0",
    "mutagen>=1.47",
    "Unidecode>=1.3",
]

[project.optional-dependencies]
analysis = [
    "librosa>=0.10",
    "numpy>=1.24",
]
rekordbox = [
    "pyrekordbox>=0.3",
]
stems = [
    "demucs>=4.0",
    "torch>=2.0",
    "torchaudio>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
playlist-convertor = "playlist_convertor.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
